--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav{
     color: white;
 }
 h1{
-    color: #884dff;
+    color: #5421ba;
     font-size: 3.5em;
     font-family: 'Open Sans', sans-serif;
 }
